# oglEngine

./: .gitmodules  CMakeLists.txt  main.cpp
General/: CMakeLists.txt  mymath.h  utility.h
Rendering/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h
shaders/: shader.fs  shader.vs
